// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectInput /> > should have some hintText 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
    <p
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjuil sprinkles_lineHeight_2_mobile__onxwjuhl sprinkles_fontWeight_normal__onxwjue4 typography_color_unset__yhjp33e elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_p__18vhvlif elementReset_trimmedElement__18vhvli0 sprinkles_marginTop_1_mobile__onxwju19t HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
    >
      hint text
    </p>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when active 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_activeBorderColour__a2a1mv1"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_activeBorderColour__a2a1mv1"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_block_mobile__onxwjuex NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz InputState_activeColour__a2a1mv0 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_activeBorderColour__a2a1mv1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and invalid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot when touched and valid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          >
            <option
              value="a"
            >
              Value 1
            </option>
            <option
              value="b"
            >
              Value 2
            </option>
            <option
              value="c"
            >
              Value 3
            </option>
          </select>
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_success_default_borderColour__a2a1mv7"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_success_default_borderColour__a2a1mv7"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            Hello World!
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            Hello World!
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_success_default_borderColour__a2a1mv7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with custom icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp input-class"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
          />
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_default__1ft8sxl15"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> > should match snapshot with prefix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_width_full_mobile__onxwjupp input-class"
    data-od-component="select-input"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_full_mobile__onxwjupp NotchedBase_root__1ft8sxl0"
    >
      <div
        class="sprinkles_height_full_mobile__onxwjuo5 sprinkles_width_full_mobile__onxwjupp"
      >
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_prefixIcon__5jmdy8k withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <div
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_justifyContent_center_mobile__onxwjux1"
        >
          <select
            autocomplete="off"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_select__18vhvli13 elementReset_trimmedElement__18vhvli0 elementReset_select__18vhvlia sprinkles_flexGrow_1_mobile__onxwjuz1 SelectInput_input__1gqjkbj0 SelectInput_paddedInput__1gqjkbj1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_input__18vhvli14 elementReset_trimmedElement__18vhvli0 elementReset_input__18vhvli9 sprinkles_backgroundColour_transparent__onxwjue0 sprinkles_width_full_mobile__onxwjupp sprinkles_position_relative_mobile__onxwjuh1 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_borderRadius_md_mobile__onxwjukd withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b withEnhancedInput_inputItselfSize_medium_prefixed_any__5jmdy8d"
          />
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_marginRight_4_mobile__onxwju18x SelectInput_arrow__1gqjkbj2"
          >
            <span
              class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              data-od-component="icon"
            >
              <svg
                aria-hidden="true"
                class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66 101.66l-80 80a8 8 0 0 1-11.32 0l-80-80a8 8 0 0 1 11.32-11.32L128 164.69l74.34-74.35a8 8 0 0 1 11.32 11.32z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_height_full_mobile__onxwjuo5 sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 sprinkles_width_full_mobile__onxwjupp sprinkles_textAlign_left_mobile__onxwjujh NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_paddingLeft_2_mobile__onxwju131 sprinkles_paddingRight_2_mobile__onxwju145 sprinkles_display_none_mobile__onxwjuet NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_label__18vhvlin  sprinkles_paddingBottom_none_mobile__onxwju12t sprinkles_paddingLeft_none_mobile__onxwju13x sprinkles_paddingRight_none_mobile__onxwju151 sprinkles_paddingTop_none_mobile__onxwju165 sprinkles_marginBottom_none_mobile__onxwju179 sprinkles_marginLeft_none_mobile__onxwju18d sprinkles_marginRight_none_mobile__onxwju19l sprinkles_marginTop_none_mobile__onxwju1at sprinkles_display_inline_mobile__onxwjufd sprinkles_pointerEvents_none__onxwjueo sprinkles_position_absolute_mobile__onxwjuh5 NotchedBase_placeholder_default__1ft8sxlz NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholder_mutedLabelStyles__1ft8sxl11 NotchedBase_placeholderPlacement_medium_defaultPrefixed__1ft8sxl16"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;
